[tool.poetry]
name = "edict-diffusion"
version = "0.1.0"
description = ""
authors = ["Joqsan Azocar <joqsan.a@gmail.com>"]
readme = "README.md"
packages = [{include = "edict_diffusion"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.3.2"
flake8-builtins = "^2.1.0"
pep8-naming = "^0.13.3"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
